# Simple_Cube

./: .gitmodules  CMakeLists.txt  Readme.md  execute.bat  execute.sh
app/include/: App.h  BoxCollider.h  Camera.h  Collider.h  Cube.h  MeshRenderer.h  Physics.h  Plane.h  RigidBody.h  Scene.h  Shader.h  TesterScene.h  Transform.h  utils.h
app/src/: App.cpp  BoxCollider.cpp  Camera.cpp  Collider.cpp  Cube.cpp  MeshRenderer.cpp  Physics.cpp  Plane.cpp  RigidBody.cpp  Scene.cpp  Shader.cpp  TesterScene.cpp  Transform.cpp  main.cpp  utils.cpp
assets/shaders/: default.vert  red.frag  white.frag
